// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> create icon 1`] = `
<span
  className="sap-icon--cart blue"
  onClick={[MockFunction]}
  role="button"
  tabIndex="0"
/>
`;

exports[`<Icon /> create icon 2`] = `
<span
  className="sap-icon--cart sap-icon--s"
  onClick={[Function]}
  role="button"
  tabIndex="0"
/>
`;
